// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/Neucloud/Detail/elements/Evidence/component render image 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(Component)
      color="grey"
      variant="h4"
    >
      Evidence
    </WithStyles(Component)>
  </WithStyles(ForwardRef(Grid))>
  <React.Fragment>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={5}
    >
      <WithStyles(Component)
        fileName=""
        url=""
      />
    </WithStyles(ForwardRef(Grid))>
  </React.Fragment>
</WithStyles(ForwardRef(Grid))>
`;

exports[`src/containers/ServiceAssurance/Neucloud/Detail/elements/Evidence/component render no data 1`] = `false`;

exports[`src/containers/ServiceAssurance/Neucloud/Detail/elements/Evidence/component render no evidence 1`] = `false`;

exports[`src/containers/ServiceAssurance/Neucloud/Detail/elements/Evidence/component render pdf 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(Component)
      color="grey"
      variant="h4"
    >
      Evidence
    </WithStyles(Component)>
  </WithStyles(ForwardRef(Grid))>
  <React.Fragment>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={12}
    >
      <WithStyles(Component)
        fileName=""
        type="pdf"
        url=""
      />
    </WithStyles(ForwardRef(Grid))>
  </React.Fragment>
</WithStyles(ForwardRef(Grid))>
`;
